--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>p5-de-asobo</title>
     <script src="main.ts" type="module"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <p>hello, p5js!</p>
-  </body>
 </html>
